# assignment

./: README.md
applications/todoapp/: Cargo.toml  entrypoint.sh  init.sql
applications/todoapp/.sqlx/: query-26df0fe746d03684246dd71792d8a038b3ae2e615255659ddc0dc2c8ac26aeed.json
applications/todoapp/src/: main.rs
assignment/applications/todoapp/: Dockerfile
assignment/applications/todoapp/.sqlx/: query-4971111a95e88a0f14bf951f7a9a51edbaf9930c7f0e6e970e19acef990b64e6.json  query-c7afe560e5fbdc28b0a0129a657a59e2a8c9aba9d3fa5124394cf343c42cea6e.json
assignment/applications/todoapp/static/: index.html
charts/postgresql/: values.yaml
charts/postgresql/templates/: _helpers.yaml  deployment.yaml
charts/todoapp/: Chart.yaml  values.yaml
charts/todoapp/templates/: _helpers.yaml  configmap.yaml  deployment.yaml  service.yaml
clusters/local/: helmfile.yaml
