[package]
name = "todoapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
env_logger = "0.11.5"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-rt = "2.5"
prometheus = "0.13.4"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
